--- a/templates/siegeengine2/html/jw_sigpro_multi/Classic/css/template.css
+++ b/templates/siegeengine2/html/jw_sigpro_multi/Classic/css/template.css
@@ -14,7 +14,18 @@ table.contentpaneopen {
 	width:100%
 }
 
-li.sigFreeClear {
+.sigFreeCenterFix{
+  /* float: left; */
+  /* position: relative; */
+  /* left: 50%; */
+  /* display: table; */
+  /* margin: auto; */
+}
+.sigFreeCenterFixIn{
+  flo
+}
+
+li.sigFreeClearTemp {
 	clear:both;
 	float:none!important;
 	height:0!important;
@@ -28,12 +39,19 @@ li.sigFreeClear {
 
 /* Container */
 ul.sigFreeClassic {
-	/* margin:8px auto!important; */
-  margin: 0 auto 0;
-	/* padding:8px 0!important; */
+	margin:8px auto!important;
+	padding:8px auto!important;
+  /* margin: auto; */
 	list-style:none;
 	clear:both;
-	overflow:hidden
+	overflow:hidden;
+  /* max-width: 970px; */
+  /* width: 968px; */
+  /* display: block; */
+  /* float: left; */
+  /* position: relative; */
+  /* left: -50%; */
+  /* text-align: center; */
 }
 
 ul.sigFreeClassic.singleThumbGallery {
@@ -47,28 +65,41 @@ ul.sigFreeClassic.singleThumbGallery {
 ul.sigFreeClassic li.sigFreeThumb {
 	float:left;
 	background:#fff!important;
-	/* margin:5px; */
-	margin:-1px;
-	padding:0;
+	/* margin:-1px; */
+	/* padding:0; */
 	list-style:none!important
+  display: inline-block;
 }
 
 /* width:33%; to force columns */
 ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkOuterWrapper {
 	display:block;
 	float:left;
-	margin:0;
-	padding:0 5px 5px 0;
+  position: relative;
+	padding:2% 1%;
 	/* background:url(../images/shadowAlpha.png) no-repeat right bottom */
 }
 
 ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkWrapper {
 	display:block;
 	float:left;
-	margin:-5px 0 0 -5px;
-	padding:4px;
+	/* margin:-5px 0 0 -5px; */
+	padding:1px;
 	/* border:1px solid #ccc */
 }
+/* @media screen and (min-width:1005px){ */
+/* ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkWrapper { */
+/* 	margin:0 0 0 -5px; */
+/* } */
+/* } */
+/*  */
+/* @media screen and (max-width:1000px){ */
+/* ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkWrapper { */
+/*   width: 200px; */
+/*   } */
+/*  */
+/* } */
+/*  */
 
 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink,ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover {
 	position:relative;
@@ -90,8 +121,8 @@ ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover {
 
 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink img.sigFreeImg,ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover img.sigFreeImg {
 	display:block;
-	/* width:100%; */
-	/* height:100%; */
+	width:100%;
+	height:100%;
 	padding:0;
 	margin:0;
 	border:none;
